--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v4
         with:
-          author_name: Jason Long
-          author_email: jason@jasonlong.me
+          author_name: mahesh
+          author_email: mahesh.io@icloud.com
           message: "Auto updating my readme"
           add: "*.svg"
         env:
