--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,38 +1,45 @@
-name: Update README
+name: Daily Contributions
 
 on:
   schedule:
-    - cron: "0 4 * * *"
-  workflow_dispatch:
+    - cron:  "0 4 * * *"
 
 jobs:
-  readme:
+  make-contribution:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          node-version: '14'  # Specify the Node.js version directly
-
-      - run: npm install
-
-      - name: Generate README
-        env:
-          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
-        run: node build-svg.js
-
-      - name: Configure Git
-        run: |
-          git config --global user.name "mahesh"
-          git config --global user.email "maheshwaranzzz1470@gmail.com"
-
+          # Checkout with full commit history
+          fetch-depth: 0
+      - name: Make daily contribution
+        run: pip3 install npm
+          # Replace this command with your own command or script that makes the changes
+          echo "Making daily contribution"
+          echo "$(date)" >> README.md
       - name: Commit changes
-        uses: EndBug/add-and-commit@v4
+        uses: EndBug/add-and-commit@v7
         with:
-          message: "Auto updating my README"
-          add: "."  # Include all changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          author_name: "GitHub Actions"
+          author_email: "actions@github.com"
+          message: "Daily contribution"
+          # Set the files to commit - replace this with your own file paths
+          add: "README.md"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          branch: daily-contribution
+          # Set the Git credentials - replace this with your own secrets
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Open pull request
+        uses: imaheshno1/create-pull-request@v3
+        with:
+          title: "Daily Contribution"
+          commit-message: "Daily contribution"
+          branch: daily-contribution
+          base: main
+          # Set the pull request body - replace this with your own content
+          body: "This pull request was created automatically by a GitHub Actions workflow to make a daily contribution."
+          # Set the Git credentials - replace this with your own secrets
+          token: ${{ secrets.GITHUB_TOKEN }}
