--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -14,7 +14,7 @@ jobs:
           # Checkout with full commit history
           fetch-depth: 0
       - name: Make daily contribution
-        run: pip3 install npm
+        run: 
           # Replace this command with your own command or script that makes the changes
           echo "Making daily contribution"
           echo "$(date)" >> README.md
